# OpenMD

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  AUTHORS  CITATION.cff  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile  QUICK_START.md  README  README.md  configure  vcpkg.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: build.yml  clang_formater_formatting  clang_formatter.yml  draft-pdf.yml  setup-msmpi.ps1
ac-tools/: ACX_MPI.m4  AC_CXX_HAVE_STL.m4  AC_CXX_NAMESPACES.m4  AC_CXX_STD.m4  AC_QHULL.m4  CGAL.m4  Make.conf.in  OOPSE.m4  OpenMD.m4  aclocal.m4  ax_mpi.m4  config.guess  configure.in  fortran90.m4  install-sh  shtool
cmake/: openmd.spec.in
cmake/modules/: FindDeePMD.cmake  FindFFTW.cmake  FindFFTW3.cmake  FindGenGetOpt.cmake  FindMpiCompilers.cmake  FindNumPy.cmake  FindOpenBabel2.cmake  FindOpenBabel3.cmake  FindPS.cmake  FindPythonPackage.cmake  FindQHULL.cmake  FindQhull.cmake  FindRapidJSON.cmake  FindSciPy.cmake  Findnep_cpu.cmake  Findnlohmann_json.cmake  Findstl_reader.cmake
cmake/scripts/: format-codebase.sh
doc/: Doxyfile  Doxyfile.in  Makefile  SelectionExpression.html  cppstyle.html  style.css
docs/: AUTHORS  Doxyfile.in  INSTALL.md
docs/paper/: paper.bib  paper.md
docs/source/: api.rst  conf.py  index.rst
forceFields/: Ag.VC.funcfl  Ag.u6.funcfl  Al.VC.funcfl  Amber.99.frc  Amber.frc  Au.VC.funcfl  Au.u3.funcfl  Au.u6.funcfl  BKS.frc  BKS.modified.frc  CLAYFF.frc  Cu.VC.funcfl  Cu.u3.funcfl  DR-EAM.frc  DR_EAM.frc  DUFF.frc  DUFF2.frc  DipoleTest.frc  EADM.frc  EAM.VC.frc  EAM.Zhou.frc  EAM.Zhou2001.frc  EAM.Zhou2004.frc  EAM.Zhou2005.frc  EAM.frc  EAM.u3.frc  EAM.u6.frc  JoungCheatham.SPCE.frc  JoungCheatham.TIP3P.frc  JoungCheatham.TIP4PEW.frc  JoungCheathamIons12-6.SPCE.frc  JoungCheathamIons12-6.TIP3P.frc  JoungCheathamIons12-6.TIP4PEW.frc  LJ.frc  LJFF.frc  LiMerzIons12-6-4.OPC.frc  LiMerzIons12-6-4.OPC3.frc  LiMerzIons12-6-4.SPCE.frc  LiMerzIons12-6-4.TIP3P-FB.frc  LiMerzIons12-6-4.TIP3P.frc  (+38 more)
lib/: CMakeLists.txt
make/: Doxyfile  Make.conf.in  Makefile  Makefile.in
make/_files/: style.css
python/: gcn_analyser.py
samples/: Makefile.in  README.md  README.md-template
samples/DR-EAM/: README.md
samples/LangevinHull/: Au_300K.md  Au_300K.omd  Au_highvisc.md  Au_highvisc.omd  Au_lowvisc.md  Au_lowvisc.omd  Au_nanoparticle_4GPa.md  Makefile  README.md  ReadMe.txt  spce.md  spce_100atm.md  spce_100atm.omd  spce_1atm.md  spce_1atm.omd  spce_Au_100atm.md  spce_Au_100atm.omd  spce_Au_1atm.md  spce_Au_1atm.omd
samples/Madelung/: Makefile  NaCl.md  NaCl.omd  README.md  README.txt
samples/OxideLibrary/: Ag2O.omd  Al2O3.dump  Al2O3.eor  Al2O3.omd  Al2O3.report  Al2O3.stat  Au2O3.omd  Co3O4.omd  Cu2O.omd  CuO2.omd  DR-EAM.v2.frc  Fe2O3.omd  FeO.omd  NiO.omd  PbO.omd  PdO2.omd  Pt3O4.omd  PtO.omd  Ta2O5.omd  TiO2.omd  ZrO2.omd
samples/RNEMD/: 2744.md  2744.omd  2744_particle.omd  2744_shear.md  2744_shear.omd  Makefile  MnM.frc  README.md  RedArgon.frc  gold_water_interface.md  gold_water_interface.omd  graphene.omd  hexane.inc  lj.inc  metals.inc  shearWater.omd  spf.omd  thiols.inc  thiols.md
samples/SMIPD/: Au_nanoparticle_10GPa.md  Au_nanoparticle_2GPa.md  Makefile  metals.md
samples/air/: Air.frc  README.md  air.inc  mix.omd
samples/alkane/: Makefile  Makefile.in  README.md  alkanes.inc  alkanes.md  aromatics.inc  bulkToluene.omd  butane.in  butane.md  butane.omd  ethane.omd  methane.omd  toluene.omd
samples/aqueousIons/: NaCl_12_6.omd  NaCl_12_6_4.omd  README.md  tunedLiMerz.SPCE.frc
samples/argon/: 500.in  500.md  500.omd  Makefile  Makefile.in  README.md  ar864.in  ar864.md  ar864.omd  argonNVT.in  argonNVT.md  argonNVT.omd  lj.md
samples/bond-order/: Ag_Cu_bulkslab_lattice.md  Ag_Cu_bulkslab_lattice.omd  Makefile  README.md  Readme.txt  bcc.md  bcc.omd  fcc.md  fcc.omd  hcp.md  hcp.omd  icosahedron.md  icosahedron.omd  sc.md  sc.omd  surface_icosahedron.md  surface_icosahedron.omd  tet.md  tet.omd
samples/builders/: Makefile  README.md  bimetallic.md  bimetallic.omd  gold.md  gold.omd  one_component.md  one_component.omd  runMe  runMe.in  three_component.md  three_component.omd
samples/cutoff/: GB-Ar-max.md  GB-Ar-mix.md  GB-Ar-traditional.md  Makefile  cutoff_test.in  cutoff_test.md  gb-ar.in  gb.md  lj.md  max.md  mix.md  traditional.md
samples/dipole/: Lipid.frc  Makefile  splitDipole.md  splitDipole.omd  splitInWater.in  splitInWater.md  splitInWater.omd  split_SSD.in  split_SSD.md  split_SSD.omd  twoSplitDipole.in  twoSplitDipole.md  twoSplitDipole.omd  water.md
samples/fluctuating/: README.md
samples/gbljtest/: 2gb.in  2gb.md  2gb.omd  Corner_1X_2Z.md  Corner_1X_2Z.omd  Corner_1Y_2Z.md  Corner_1Y_2Z.omd  Corner_1Z_2X.md  Corner_1Z_2X.omd  Corner_1Z_2Y.md  Corner_1Z_2Y.omd  Field.frc  Makefile  README.md  Side_1X_2Z.md  Side_1X_2Z.omd  Side_1Y_2Z.md  Side_1Y_2Z.omd  Side_1Z_2X.md  Side_1Z_2X.omd  Side_1Z_2Y.md  Side_1Z_2Y.omd  TestAtom.inc  Top_1X_2Z.md  Top_1X_2Z.omd  Top_1Y_2Z.md  Top_1Y_2Z.omd  Top_1Z_2X.md  Top_1Z_2X.omd  Top_1Z_2Y.md  Top_1Z_2Y.omd  Tshape_1X_2Z.md  Tshape_1X_2Z.omd  Tshape_1Y_2Z.md  Tshape_1Y_2Z.omd  Tshape_1Z_2X.md  Tshape_1Z_2X.omd  Tshape_1Z_2Y.md  Tshape_1Z_2Y.omd  gb.inc  (+15 more)
samples/graphene/: README.md  graphene.inc  graphene.omd  graphene.raw.inc  propylene.omd  propylene.xyz  system.pack
samples/lipid/: 5x5.in  5x5.md  5x5.omd  Makefile  Makefile.in  lipid.inc  lipid.md  water.md
samples/liquid/: README.md  methanol.xyz
samples/metals/: Au-Core-Ag-Shell_Nanoparticle.in  Au-Core-Ag-Shell_Nanoparticle.md  Au_bulk_FBD.md  Au_bulk_voter.md  Au_nanoparticle.in  Au_nanoparticle.md  Makefile  Makefile.in  README.md  metals.md
samples/minimizer/: Makefile  Makefile.in  README.md  WATER.frc  graphene.frc  metals.inc  mnm.omd  p10-small.inc  p10-small.omd  ssdEM.in  ssdEM.md  (+5 more)
scripts/: cleanSrc  cvs2cl  cvs2cl.pl  filepp  filepp.in  makers  regen-ggo.py  sfmakedepend
src/: Makefile  config.h.cmake  config.h.in  getopt.h
validation/: comp_md.py  comp_md_files.py
(+2492 files in other folders)
